# duckdb-avro

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: avro_copy.cpp  avro_extension.cpp  avro_multi_file_info.cpp  avro_reader.cpp  field_ids.cpp  test.cpp
src/include/: avro_copy.hpp  avro_extension.hpp  avro_multi_file_info.hpp  avro_reader.hpp  avro_type.hpp  field_ids.hpp  jansson_config.h
test/: all_nullable_list.avro  broken_record.avro  create_test_file.py  empty_record.avro  enum.avro  fixed.avro  logical_types.avro  long_map.avro  manifest.avro  nested_nullable_lists.avro  null_first.avro  null_last.avro  nullable_entry_string_array.avro  nullable_string_array.avro  primitive_types.avro  recursive.avro  reuse-1.avro  reuse-2.avro  root-int.avro  single-union.avro  string_array.avro  union-name-1.avro  union-name-2.avro  union-name-3.avro  union.avro  users.avro
test/iceberg/: snap-4438118734176652631-1-2936af0b-e8dd-4ca3-b8b5-3e0346b5c662.avro
test/sql/: avro.test  bigdata.test  crash.test  external_file_cache.test  iceberg.test  test_missing_file.test
test/sql/copy/: all_types.test  duplicate_name.test  empty_struct.test  field_ids.test  invalid_name.test  invalid_option.test  large_list.test_slow  large_list_struct_coverage.test_slow  write_metadata.test
vcpkg_ports/avro-c/: avro_writer.patch  field_id.patch  portfile.cmake  vcpkg.json
vcpkg_ports/liblzma/: portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
vcpkg_ports/snappy/: portfile.cmake  vcpkg.json
vcpkg_ports/zlib/: portfile.cmake  vcpkg.json
